# codex-clean

./: Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  secret-scan.yml
src/: events.rs  lib.rs  main.rs  output.rs  ratelimit.rs  runner.rs  seat.rs  seat_cmd.rs
tests/: integration.rs  seat_integration.rs
tests/fixtures/: agent_message.json  failed_turn.jsonl  review_session.jsonl  sample_session.jsonl  tool_call.json  turn_completed.json
